--- a/views/index.html
+++ b/views/index.html
@@ -216,7 +216,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Node.js application on OpenShift test test</h1>
+            <h1>Welcome to your Node.js application on OpenShift test test 2 2 2</h1>
           </hgroup>
 
 
